--- a/css/estilo - copia.css
+++ b/css/estilo - copia.css
@@ -93,11 +93,11 @@ hr.footer__line{
 
 p{
 	font-size: 1.4rem;
+	.copyright{
+		font-size: 1rem;
+	}
 }
 
-p.copyright{
-	font-size: 1rem;
-}
 
 /*NOSOTROS PAGE*/
 
