--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -20,6 +20,6 @@
 	object-fit: cover;
 	margin: 20px;
 	border-radius: 20px;
-	border: 2px solid #3e618c !important;
+	border: 2px solid $colorPrincipal !important;
 	box-shadow: 0px 5px 15px #0000006e;
 }
