--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -40,5 +40,5 @@ nav{
 }
 
 .dropdown-menu, .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    background-color: #3e618c;
+    background-color: $colorPrincipal;
 }
