--- a/css/estilo.css
+++ b/css/estilo.css
@@ -34,22 +34,28 @@ nav {
   box-shadow: 0px 5px 10px #00000082;
   z-index: 2; }
 
-.navbar-light .navbar-nav .nav-link, .navbar-light .navbar-nav .nav-link:hover {
-  color: white; }
+.navbar-light .navbar-nav .nav-link {
+  color: #fff; }
+  .navbar-light .navbar-nav .nav-link:hover {
+    color: #fff; }
 
 .navbar-light .navbar-nav .nav-link.active {
-  color: white; }
-
-.nav-tabs .nav-link.active {
-  color: #495057;
-  background-color: #6c98cf;
+  color: #fff;
+  background-color: #00000000;
   border-color: #dee2e6 #dee2e6 #fff;
   font-weight: bold; }
 
-.dropdown-item, .navbar-light .navbar-nav .show > .nav-link {
+.navbar-light .navbar-nav .show > .nav-link {
   color: #fff; }
 
-.dropdown-menu, .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.dropdown-item {
+  color: #fff;
+  background-color: #3e618c; }
+
+.nav-tabs .nav-item.show .nav-link {
+  background-color: #3e618c; }
+
+.nav-tabs .nav-link.active {
   background-color: #3e618c; }
 
 /*INDEX CAROUSEL SECTION*/
