--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -20,25 +20,35 @@ nav{
 	z-index: 2;
 }
 
-.navbar-light .navbar-nav .nav-link, .navbar-light .navbar-nav .nav-link:hover {
-    color: white;
+.navbar-light .navbar-nav{
+	.nav-link{
+		color: $navbarText;
+			&:hover{
+				color: $navbarText;
+			}
+	}
+	.nav-link.active{
+				color: $navbarText;
+	   			background-color: #00000000;
+			    border-color: #dee2e6 #dee2e6 #fff;
+			    font-weight: bold;
+	}
+
+	.show>.nav-link{
+		color: $navbarText;
+	}
 }
 
-.navbar-light .navbar-nav .nav-link.active{
-    color: white;
-}
+.dropdown-item{
+		color: $navbarText;
+		background-color: $colorPrincipal;
+	}
 
-.nav-tabs .nav-link.active {
-    color: #495057;
-    background-color: #6c98cf;
-    border-color: #dee2e6 #dee2e6 #fff;
-    font-weight: bold;
-}
-
-.dropdown-item, .navbar-light .navbar-nav .show>.nav-link {
-    color: #fff;
-}
-
-.dropdown-menu, .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    background-color: $colorPrincipal;
+.nav-tabs{
+	.nav-item.show .nav-link{
+		background-color: $colorPrincipal;
+	}
+	.nav-link.active{
+		background-color: $colorPrincipal;
+	}
 }
