--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,11 +1,10 @@
 /*SECTION LINE*/
-hr .section__line, hr .footer__line {
-  background-color: #3e618c;
-  height: 3px;
-  width: 100%; }
+.section__line {
+  border-top: 2px solid #3e618c; }
 
-hr .footer__line {
-  height: 0px; }
+.footer__line {
+  border-top: 1px solid gray;
+  width: 100%; }
 
 /*FONT*/
 .article__title {
@@ -13,8 +12,9 @@ hr .footer__line {
 
 p {
   font-size: 1.4rem; }
-  p .copyright {
-    font-size: 1rem; }
+
+.copyright {
+  font-size: 0.8rem; }
 
 .container-fluid {
   padding-right: 0;
