--- a/views/galeria.html
+++ b/views/galeria.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Visite nuestra galería dónde encontras los viajes privados que realizamos">
+	<meta name="keywords" content="ESCUELA DE VUELO, VOLAR, VUELO, AVIACION, VUELOS PRIVADOS, HELICOPTERO, VIAJE, INSTRUCCION">
 	<title>MBT - Galería</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
