--- a/views/instruccion.html
+++ b/views/instruccion.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Realizamos vuelos de instrucción a tu medida con el moderno avión Tecnam p-2002">
+	<meta name="keywords" content="ESCUELA DE VUELO, VOLAR, VUELO, AVIACION, VUELOS PRIVADOS, HELICOPTERO, VIAJE, INSTRUCCION, TECNAM, P2002, P-2002, APRENDER A VOLAR">
 	<title>MBT - Instrucción</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilo.css">
@@ -43,7 +45,7 @@
 	<main class="row">
 		<div class="d-flex justify-content-center">
 			<article class="instru__article col-10 col-lg-8 d-flex flex-column justify-content-center">
-				<h1 class="article__title text-center h1 my-5">Entrenamiento e Instruccion para pilotos</h1>
+				<h1 class="article__title text-center h1 my-5">Entrenamiento e Instrucción para pilotos</h1>
 				<p class="article__p text-justify">Brindamos un servicio de instrucción exclusiva para pilotos en nuestro Monomotor Tecnam P-2002 con el cual se pueden realizar vuelos locales y navegaciones de manera nacional e internacional.<br>
 				También realizamos instrucción en helicóptero Robinson R-44.<br>
 				Operamos principalmente desde el aerodromo de ezpeleta.<br>
