--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,7 +10,9 @@
 .article__title {
   text-shadow: 5px 5px 5px #aaa; }
 
-p {
+p, .copyright {
+  color: black;
+  text-align: center;
   font-size: 1.4rem; }
 
 .copyright {
@@ -79,7 +81,7 @@ nav {
   object-fit: cover;
   margin: 20px;
   border-radius: 20px;
-  border: 2px solid #3e618c !important;
+  border: 2px solid get-map((principal: #3e618c, navbarColor: linear-gradient(0deg, #3e618c, #273d57), navbarText: #fff), principal) !important;
   box-shadow: 0px 5px 15px #0000006e; }
 
 .staff__img {
@@ -90,6 +92,11 @@ nav {
 .detalle__tarifa {
   height: 200px; }
 
+/* @mixing images($width,$height){
+	height:$height;
+	width: $width;
+}
+ */
 .img__galery img {
   height: 300px;
   width: 300px;
