--- a/views/aeronaves.html
+++ b/views/aeronaves.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Disponemos de tanto de aeronaves bimotor, monomotor y helicóptero para realizar el servicio a tu medida">
+	<meta name="keywords" content="ESCUELA DE VUELO, VOLAR, VUELO, AVIACION, VUELOS PRIVADOS, HELICOPTERO, VIAJE, INSTRUCCION, AERONAVES, R44, PA31, P2022, ROBINSON, PIPER, NAVAJO, TECNAM">
 	<title>MBT - Aeronaves</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilo.css">
