--- a/views/contacto.html
+++ b/views/contacto.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Contáctenos si desea realizar vuelos privados en avión o helicóptero, o si desea recibir instrucción como piloto">
+	<meta name="keywords" content="ESCUELA DE VUELO, VOLAR, VUELO, AVIACION, VUELOS PRIVADOS, HELICOPTERO, VIAJE, INSTRUCCION, CONTACTO">
 	<title>MBT - Contacto</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilo.css">
