--- a/scss/components/_galeria.scss
+++ b/scss/components/_galeria.scss
@@ -1,10 +1,9 @@
-/* @mixing images($width,$height){
+@mixin images($width,$height){
 	height:$height;
 	width: $width;
 }
- */
+
 .img__galery img{
-	height: 300px;
-	width: 300px;
+	@include images(300px, 300px);
 	object-fit: cover;
 }
